--- a/modules/abstract-utxo/package.json
+++ b/modules/abstract-utxo/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "dependencies": {
+    "@bitgo/secp256k1": "^1.5.0",
     "@bitgo/blockapis": "^1.12.0",
     "@bitgo/sdk-api": "^1.70.1",
     "@bitgo/sdk-core": "^36.12.0",
