--- a/modules/utxo-core/package.json
+++ b/modules/utxo-core/package.json
@@ -52,6 +52,7 @@
     ]
   },
   "dependencies": {
+    "@bitgo/secp256k1": "^1.5.0",
     "@bitgo/unspents": "^0.50.2",
     "@bitgo/utxo-lib": "^11.11.0",
     "@bitgo/wasm-miniscript": "2.0.0-beta.7",
