--- a/modules/sdk-coin-celo/package.json
+++ b/modules/sdk-coin-celo/package.json
@@ -44,15 +44,10 @@
     "@bitgo/sdk-coin-eth": "^25.3.4",
     "@bitgo/sdk-core": "^36.12.0",
     "@bitgo/statics": "^58.4.0",
-    "@celo/connect": "^2.0.0",
-    "@celo/contractkit": "^2.0.0",
-    "@celo/wallet-base": "^2.0.0",
-    "@celo/wallet-local": "^2.0.0",
     "@ethereumjs/common": "^2.6.5",
     "bignumber.js": "^9.0.0",
     "ethereumjs-abi": "^0.6.5",
-    "ethereumjs-util": "7.1.5",
-    "ethers": "^5.1.3"
+    "ethereumjs-util": "7.1.5"
   },
   "devDependencies": {
     "@bitgo/sdk-api": "^1.70.1",
