--- a/modules/sdk-lib-mpc/package.json
+++ b/modules/sdk-lib-mpc/package.json
@@ -39,6 +39,8 @@
     "@noble/curves": "1.8.1",
     "@silencelaboratories/dkls-wasm-ll-node": "1.2.0-pre.4",
     "@silencelaboratories/dkls-wasm-ll-web": "1.2.0-pre.4",
+    "@silencelaboratories/eddsa-wasm-ll-node": "1.0.0-pre.3",
+    "@silencelaboratories/eddsa-wasm-ll-web": "1.0.0-pre.3",
     "@types/superagent": "4.1.15",
     "@wasmer/wasi": "^1.2.2",
     "bigint-crypto-utils": "3.1.4",
@@ -54,6 +56,7 @@
   "devDependencies": {
     "@bitgo/sdk-opensslbytes": "^2.0.0",
     "@silencelaboratories/dkls-wasm-ll-bundler": "1.2.0-pre.4",
+    "@silencelaboratories/eddsa-wasm-ll-bundler": "1.0.0-pre.3",
     "@types/lodash": "^4.14.151",
     "@types/node": "^22.15.29",
     "@types/sjcl": "1.0.34",
@@ -61,10 +64,14 @@
     "sjcl": "1.0.8"
   },
   "peerDependencies": {
-    "@silencelaboratories/dkls-wasm-ll-bundler": "1.2.0-pre.4"
+    "@silencelaboratories/dkls-wasm-ll-bundler": "1.2.0-pre.4",
+    "@silencelaboratories/eddsa-wasm-ll-bundler": "1.0.0-pre.3"
   },
   "peerDependenciesMeta": {
     "@silencelaboratories/dkls-wasm-ll-bundler": {
+      "optional": true
+    },
+    "@silencelaboratories/eddsa-wasm-ll-bundler": {
       "optional": true
     }
   },
