--- a/modules/abstract-utxo/package.json
+++ b/modules/abstract-utxo/package.json
@@ -51,7 +51,7 @@
     "@bitgo/utxo-core": "^1.21.3",
     "@bitgo/utxo-lib": "^11.14.0",
     "@bitgo/utxo-ord": "^1.22.11",
-    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "@bitgo/wasm-utxo": "1.1.0",
     "@types/lodash": "^4.14.121",
     "@types/superagent": "4.1.15",
     "bignumber.js": "^9.0.2",
