--- a/modules/utxo-core/package.json
+++ b/modules/utxo-core/package.json
@@ -55,7 +55,7 @@
     "@bitgo/secp256k1": "^1.7.0",
     "@bitgo/unspents": "^0.50.7",
     "@bitgo/utxo-lib": "^11.14.0",
-    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "@bitgo/wasm-utxo": "1.1.0",
     "bip174": "npm:@bitgo-forks/bip174@3.1.0-master.4",
     "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3",
     "fast-sha256": "^1.3.0"
