--- a/modules/utxo-bin/package.json
+++ b/modules/utxo-bin/package.json
@@ -31,7 +31,7 @@
     "@bitgo/unspents": "^0.50.6",
     "@bitgo/utxo-core": "^1.21.2",
     "@bitgo/utxo-lib": "^11.13.1",
-    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "@bitgo/wasm-utxo": "0.0.2",
     "@noble/curves": "1.8.1",
     "archy": "^1.0.0",
     "bech32": "^2.0.0",
