--- a/modules/utxo-staking/package.json
+++ b/modules/utxo-staking/package.json
@@ -47,7 +47,7 @@
     "@bitgo/babylonlabs-io-btc-staking-ts": "^3.1.0",
     "@bitgo/utxo-core": "^1.21.2",
     "@bitgo/utxo-lib": "^11.13.1",
-    "@bitgo/wasm-miniscript": "2.0.0-beta.7",
+    "@bitgo/wasm-utxo": "0.0.2",
     "bip174": "npm:@bitgo-forks/bip174@3.1.0-master.4",
     "bip322-js": "^2.0.0",
     "bitcoinjs-lib": "^6.1.7",
