--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -83,6 +83,7 @@
     "@bitgo/sdk-coin-ethw": "^20.3.10",
     "@bitgo/sdk-coin-evm": "^1.8.1",
     "@bitgo/sdk-coin-flr": "^1.6.10",
+    "@bitgo/sdk-coin-flrp": "^1.2.2",
     "@bitgo/sdk-coin-hash": "^3.6.10",
     "@bitgo/sdk-coin-hbar": "^2.5.4",
     "@bitgo/sdk-coin-icp": "^1.19.10",
