--- a/package.json
+++ b/package.json
@@ -131,6 +131,7 @@
     "check-commits": "yarn commitlint --from=origin/${GITHUB_REPO_BRANCH:-master} -V",
     "check-deps": "tsx ./scripts/check-package-dependencies.ts",
     "check-versions": "node ./check-package-versions.js",
+    "upgrade-dep": "tsx ./scripts/upgrade-workspace-dependency.ts upgrade",
     "dev": "tsc -b ./tsconfig.packages.json -w",
     "prepare": "husky install",
     "sdk-coin:new": "yo ./scripts/sdk-coin-generator",
