--- a/modules/utxo-core/tsconfig.json
+++ b/modules/utxo-core/tsconfig.json
@@ -1,11 +1,13 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist/cjs",
     "rootDir": "./",
     "esModuleInterop": true,
     "allowJs": false,
-    "strict": true
+    "strict": true,
+    "moduleResolution": "node16",
+    "module": "node16"
   },
   "include": ["src/**/*", "test/**/*"],
   "exclude": ["node_modules"],
