feat(utxo-staking): add ESM build support
Configure dual CommonJS/ESM output for utxo-staking module. Update package.json
with proper export conditions and file paths. Add ESM-specific tsconfig.

Issue: BTC-2732

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/modules/utxo-staking/tsconfig.json
+++ b/modules/utxo-staking/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist/cjs",
     "rootDir": ".",
     "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
     "allowJs": false,
