--- a/modules/bitgo/package.json
+++ b/modules/bitgo/package.json
@@ -153,7 +153,7 @@
     "karma-typescript": "5.5.4",
     "keccak": "3.0.3",
     "libsodium-wrappers-sumo": "^0.7.9",
-    "puppeteer": "2.1.1",
+    "puppeteer": "^23.10.0",
     "q": "^1.1.2"
   },
   "optionalDependencies": {
