--- a/modules/sdk-core/tsconfig.json
+++ b/modules/sdk-core/tsconfig.json
@@ -1,10 +1,8 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist/cjs",
+    "outDir": "./dist",
     "rootDir": "./",
-    "module": "node16",
-    "moduleResolution": "node16",
     "strictPropertyInitialization": false,
     "esModuleInterop": true,
     "typeRoots": ["../../types", "./node_modules/@types", "../../node_modules/@types"]
