--- a/modules/account-lib/package.json
+++ b/modules/account-lib/package.json
@@ -52,6 +52,7 @@
     "@bitgo/sdk-coin-eth": "^25.4.2",
     "@bitgo/sdk-coin-evm": "^1.10.1",
     "@bitgo/sdk-coin-flr": "^1.6.17",
+    "@bitgo/sdk-coin-flrp": "^1.4.1",
     "@bitgo/sdk-coin-hash": "^3.6.17",
     "@bitgo/sdk-coin-hbar": "^2.5.11",
     "@bitgo/sdk-coin-icp": "^1.19.17",
