feat(scripts): add plugin-based SDK coin generator v2 for ethalt coins
Ticket: WIN-8259

TICKET: WIN-8259

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -135,6 +135,7 @@
 /modules/statics/src/utxo.ts @BitGo/btc-team
 /modules/web-demo/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-core @BitGo/wallet-core-india
 /scripts/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-core @BitGo/wallet-core-india @BitGo/developer-experience
+/scripts/sdk-coin-generator-v2/ @BitGo/ethalt-team
 /types/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-core @BitGo/wallet-core-india
 /webpack/ @BitGo/coins @BitGo/web-experience @BitGo/wallet-core @BitGo/wallet-core-india
 
