--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
+    "@clack/prompts": "^0.7.0",
     "@commitlint/cli": "^19.4.0",
     "@commitlint/config-conventional": "^19.2.2",
     "@types/lodash": "^4.14.151",
@@ -141,6 +142,7 @@
     "dev": "tsc -b ./tsconfig.packages.json -w",
     "prepare": "husky install",
     "sdk-coin:new": "yo ./scripts/sdk-coin-generator",
+    "sdk-coin:new-v2": "tsx ./scripts/sdk-coin-generator-v2/index.ts",
     "build-docker-express": "yarn update-dockerfile && ./scripts/build-docker-express.sh",
     "update-dockerfile": "tsx scripts/update-dockerfile.ts",
     "precommit": "lint-staged",
