--- a/modules/sdk-coin-tempo/package.json
+++ b/modules/sdk-coin-tempo/package.json
@@ -43,7 +43,8 @@
     "@bitgo/abstract-eth": "^24.19.4",
     "@bitgo/sdk-core": "^36.25.0",
     "@bitgo/secp256k1": "^1.8.0",
-    "@bitgo/statics": "^58.19.0"
+    "@bitgo/statics": "^58.19.0",
+    "ethers": "^5.7.2"
   },
   "devDependencies": {
     "@bitgo/sdk-api": "^1.72.2",
