--- a/modules/sdk-coin-flrp/package.json
+++ b/modules/sdk-coin-flrp/package.json
@@ -47,6 +47,7 @@
     "@bitgo/sdk-test": "^9.1.20"
   },
   "dependencies": {
+    "@bitgo/public-types": "5.61.0",
     "@bitgo/sdk-core": "^36.25.0",
     "@bitgo/secp256k1": "^1.8.0",
     "@bitgo/statics": "^58.19.0",
