feat: add support for wasm-utxo script types in Dimensions
Add the ability to parse wasm-utxo script type names in the Dimensions
class, allowing for interoperability between BitGoJS components that use
either utxolib or wasm-utxo. This includes:

- Adding support for wasm-utxo script type aliases like 'p2trLegacy'
- Enhancing fromScriptType to accept both naming conventions
- Adding fromPsbt overload that accepts wasm-utxo BitGoPsbt instances
- Adding constants for available script types
- Adding tests for new functionality

Co-authored-by: llm-git <llm-git@ttll.de>

Ticket: BTC-2909

TICKET: BTC-0

--- a/modules/unspents/package.json
+++ b/modules/unspents/package.json
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "@bitgo/utxo-lib": "^11.19.0",
+    "@bitgo/wasm-utxo": "^1.17.0",
     "lodash": "~4.17.21",
     "tcomb": "~3.2.29",
     "varuint-bitcoin": "^1.0.4"
