--- a/modules/sdk-coin-tempo/package.json
+++ b/modules/sdk-coin-tempo/package.json
@@ -44,6 +44,7 @@
     "@bitgo/sdk-core": "^36.25.0",
     "@bitgo/secp256k1": "^1.8.0",
     "@bitgo/statics": "^58.19.0",
+    "@ethereumjs/common": "^2.6.5",
     "ethers": "^5.7.2"
   },
   "devDependencies": {
