--- a/modules/secp256k1/package.json
+++ b/modules/secp256k1/package.json
@@ -34,6 +34,8 @@
     "@brandonblack/musig": "^0.0.1-alpha.0",
     "@noble/secp256k1": "1.6.3",
     "bip32": "^3.0.1",
+    "bitcoinjs-message": "npm:@bitgo-forks/bitcoinjs-message@1.0.0-master.3",
+    "bs58check": "^2.1.2",
     "create-hash": "^1.2.0",
     "create-hmac": "^1.1.7",
     "ecpair": "npm:@bitgo/ecpair@2.1.0-rc.0"
