--- a/.github/workflows/audit-api-spec.yaml
+++ b/.github/workflows/audit-api-spec.yaml
@@ -68,6 +68,7 @@ jobs:
       - name: Checkout PR
         uses: actions/checkout@v6
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           fetch-depth: 0
 
       - name: Find and checkout merge base
