--- a/modules/sdk-core/package.json
+++ b/modules/sdk-core/package.json
@@ -52,6 +52,7 @@
     "big.js": "^3.1.3",
     "bigint-crypto-utils": "3.1.4",
     "bignumber.js": "^9.1.1",
+    "bolt11": "^1.0.0",
     "bs58": "^4.0.1",
     "create-hmac": "^1.1.7",
     "debug": "^3.1.0",
