feat(abstract-utxo): use wasm-utxo for inscriptionBuilder
Convert inscriptionBuilder to use @bitgo/wasm-utxo instead of utxo-lib
for inscription-related functionality. Update interfaces to accommodate
the new WASM-based implementation and add helper functions to handle
the transition.

Issue: BTC-2936

Co-authored-by: llm-git <llm-git@ttll.de>

--- a/modules/utxo-ord/package.json
+++ b/modules/utxo-ord/package.json
@@ -45,8 +45,9 @@
     "directory": "modules/utxo-ord"
   },
   "dependencies": {
-    "@bitgo/sdk-core": "^36.29.0",
-    "@bitgo/unspents": "^0.50.14",
+    "@bitgo/wasm-utxo": "^1.27.0"
+  },
+  "devDependencies": {
     "@bitgo/utxo-lib": "^11.19.1"
   },
   "lint-staged": {
