--- a/modules/utxo-ord/tsconfig.json
+++ b/modules/utxo-ord/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
-    "outDir": "./dist",
+    "outDir": "./dist/cjs",
     "rootDir": ".",
     "typeRoots": ["./node_modules/@types", "../../node_modules/@types"],
     "allowJs": false,
