--- a/.iyarc
+++ b/.iyarc
@@ -4,4 +4,10 @@
 # - This CVE affects archive EXTRACTION (unpacking malicious symlinks/hardlinks)
 # - Lerna only uses tar for PACKING
 GHSA-8qq5-rm4j-mr97
+
+# Excluded because:
+# - Transitive dependency through lerna and yeoman-generator, which currently pin tar to a
+#   < 7.5.4 range; We only use their tar integration for
+#   archive PACKING, not extraction,
 GHSA-r6q2-hw4h-h46w
+
