--- a/modules/sdk-coin-sol/package.json
+++ b/modules/sdk-coin-sol/package.json
@@ -44,6 +44,7 @@
     "@bitgo/sdk-core": "^36.29.0",
     "@bitgo/sdk-lib-mpc": "^10.8.1",
     "@bitgo/statics": "^58.23.0",
+    "@bitgo/wasm-solana": "file:bitgo-wasm-solana-0.0.1.tgz",
     "@solana/spl-stake-pool": "1.1.8",
     "@solana/spl-token": "0.3.1",
     "@solana/web3.js": "1.92.1",
